# triangulation

./: CMakeLists.txt  Oda's conjecture.ipynb  Session.cpp  Session.h  main.cpp
appcore/: ActionsProcessor.cpp  ActionsProcessor.h  CMakeLists.txt  DCEL.cpp  DCEL.h  Epsilon.cpp  Epsilon.h  Face.cpp  Face.h  Halfedge.cpp  Halfedge.h  MonotonePolygon.h  Polygon.h  SelectionProcessor.cpp  SelectionProcessor.h  Storage.cpp  Storage.h  Triangle.h  Vector2.cpp  Vector2.h  Vertex.cpp  Vertex.h
appgui/: CMakeLists.txt  GUIPoint.cpp  GUIPoint.h  GUITrace.cpp  GUITrace.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  MainWindow.cpp  MainWindow.h
appgui/Widgets/: Actions.h  ActionsLayout.cpp  ActionsLayout.h  MouseCoords.cpp  MouseCoords.h
